[package]
name = "cosmos-flake-detector"
version = "0.1.0"
edition = "2024"

# Required by crates.io (or strongly expected)
description = "CLI tool to detect flaky behavior and downtime signals in Cosmos nodes/validators from logs and RPC checks."
license = "MIT"                           # Or: "Apache-2.0" or "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/saadaltafofficial/cosmos-flake-detector"

# Optional but recommended
homepage = "https://github.com/saadaltafofficial/cosmos-flake-detector"
documentation = "https://docs.rs/cosmos-flake-detector"
keywords = ["cosmos", "validator", "monitoring", "cli", "tendermint"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
hdrhistogram = "7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
